--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,71 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+/*
+font-family: 'Montserrat', sans-serif;
+font-family: 'Nunito Sans', sans-serif;
+font-family: 'NanumSquare', sans-serif;
+*/
+
+/*page css*/
+
+.header {
+  height: 100px;
+}
+
+.gnb-list-item {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+}
+.gnb-list-link {
+  color: #191919;
+  text-decoration: none;
+}
+.gnb-list-link:hover {
+  color: #10c9c3;
+}
+.gnb-list-link:active {
+  color: red;
+}
+.section01 {
+  height: 315px;
+  background-color: #f6f6f6;
+  padding-top: 100px;
+  box-sizing: border-box;
+  text-align: center;
+}
+.section-heading {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 38px;
+  color: #191919;
+  margin-bottom: 35px;
+}
+.paragragh {
+  font-family: "NanumSquare", sans-serif;
+  font-size: 16px;
+  color: #191919;
+  line-height: 1.6;
+  font-style: italic;
+}
+
+.figure {
+  width: 340px;
+  height: 300px;
+}
+
+.figure-image {
+  width: 340px;
+  height: 300px;
+}
+
+.figure-video {
+  width: 340px;
+  height: 300px;
+}
+.footer {
+  height: 280px;
+  background-color: #141414;
+  color: #fff;
+}
